# slidin-puzzle

./: .gitignore  Cargo.toml  README.md  main.py
migrations/: 20231216143019_full_path.sql  20240203190334_full_path.sql
src/: main.rs  slayin.rs
templates/: base.html  edit.html  index.html  iteration.html  iteration2.html  loading.html  loadz.html  random.html  slide.html
